Remove -  member Project or Task
