# public/swagger/swagger.json
@@ -316,6 +316,45 @@
                 }
             }
         },
+        "/api/project/removeMember": {
+            "post": {
+                "tags": [
+                    "Project"
+                ],
+                "description": "remove Member from Project",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "UserId",
+                        "in": "query",
+                        "description": "Enter User ID Member do you want to remove:",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
         "/api/project/showProjectsList": {
             "get": {
                 "tags": [
@@ -645,6 +684,98 @@
                         "name": "TaskId",
                         "in": "query",
                         "description": "Enter Task ID:",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/addMembersListToTask": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "add Members List To Task",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "TaskId",
+                        "in": "query",
+                        "description": "Enter Task ID:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "UserIdList",
+                        "in": "query",
+                        "description": "Enter User Member List like [1,2,3,...]",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/removeMember": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "remove Member from Task",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "TaskId",
+                        "in": "query",
+                        "description": "Enter Task ID:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "UserId",
+                        "in": "query",
+                        "description": "Enter User ID Member do you want to remove:",
                         "required": true,
                         "type": "number"
                     }
